Feat: Finalize mobile slider and padding

--- a/sections/product-gallery.liquid
+++ b/sections/product-gallery.liquid
@@ -3,8 +3,8 @@
   Final version with a fix for sluggish and skipping swipe behavior.
 {% endcomment %}
 
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
-<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js" defer></script>
+{{ 'swiper-bundle.min.css' | asset_url | stylesheet_tag }}
+<script src="{{ 'swiper-bundle.min.js' | asset_url }}" defer></script>
 
 <main class="main-product-gallery full-width" role="main">
   <section class="product-gallery-section">
